--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -217,83 +217,85 @@
       <div class="col-md-12">
         <div class="page-des faqs-pg-des">
           <h2><strong>FREQUENTLY ASKED </strong> QUESTIONS</h2>
-          <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #1?</h3>
-              <div class="hh-accordion-des">
-                <div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
-                  </p>
-              </div>
-            </div>
-          </div>
+          <div class="hh-accordion-tab-cntlr">
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #2?</h3>
-              <div class="hh-accordion-des">
-                <div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
-                  </p>
+                <h3 class="hh-accordion-title">Question Number #1?</h3>
+                <div class="hh-accordion-des">
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="hh-accordion-tab-row">
-            <h3 class="hh-accordion-title">Question Number #3?</h3>
-              <div class="hh-accordion-des">
-                <div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
-                  </p>
+              <div class="hh-accordion-tab-row">
+                <h3 class="hh-accordion-title">Question Number #2?</h3>
+                <div class="hh-accordion-des">
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="hh-accordion-tab-row">
-            <h3 class="hh-accordion-title">Question Number #4?</h3>
-              <div class="hh-accordion-des">
-                <div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
-                  </p>
+            <div class="hh-accordion-tab-row">
+              <h3 class="hh-accordion-title">Question Number #3?</h3>
+                <div class="hh-accordion-des">
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="hh-accordion-tab-row">
-            <h3 class="hh-accordion-title">Question Number #5?</h3>
-              <div class="hh-accordion-des">
-                <div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
-                  </p>
+            <div class="hh-accordion-tab-row">
+              <h3 class="hh-accordion-title">Question Number #4?</h3>
+                <div class="hh-accordion-des">
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="hh-accordion-tab-row">
-            <h3 class="hh-accordion-title">Question Number #6?</h3>
-              <div class="hh-accordion-des">
-                <div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
-                  </p>
+            <div class="hh-accordion-tab-row">
+              <h3 class="hh-accordion-title">Question Number #5?</h3>
+                <div class="hh-accordion-des">
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="hh-accordion-tab-row">
-            <h3 class="hh-accordion-title">Question Number #7?</h3>
-              <div class="hh-accordion-des">
-                <div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
-                  </p>
+            <div class="hh-accordion-tab-row">
+              <h3 class="hh-accordion-title">Question Number #6?</h3>
+                <div class="hh-accordion-des">
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="hh-accordion-tab-row">
-            <h3 class="hh-accordion-title">Question Number #8?</h3>
-              <div class="hh-accordion-des">
-                <div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
-                  </p>
+            <div class="hh-accordion-tab-row">
+              <h3 class="hh-accordion-title">Question Number #7?</h3>
+                <div class="hh-accordion-des">
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
+                </div>
+              </div>
+            </div>
+            <div class="hh-accordion-tab-row">
+              <h3 class="hh-accordion-title">Question Number #8?</h3>
+                <div class="hh-accordion-des">
+                  <div>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
+                </div>
               </div>
             </div>
           </div>
