--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -198,6 +198,23 @@
   </div>
 </header>
 
+
+<section class="how-to-play-sec page-banner-section">
+  <div class="banner-bg htp-banner-bg">
+    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/hit-bnr-page-rgt-img.jpg')"></div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="htp-sec-desc">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="main-content">
   <div class="container">
       <div class="row">
