--- a/themes/wwcomps/contact-us.html
+++ b/themes/wwcomps/contact-us.html
@@ -205,32 +205,107 @@
   </div>
 </section>
 
-<section class="contact-us-sec">
-  <div class="contact-bg">
-    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/forest-img-left.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/forest-img-rgt.jpg')"></div>
+<section class="page-banner-section contact-us-sec">
+  <div class="banner-bg contact-bg">
+    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/cu-bnr-lft-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/cu-bnr-rgt-img.jpg')"></div>
   </div>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="page-des">
-          <h2 class="fl-h1">PLAY TO <strong>PLANT.</strong></h2>
-          <h3 class="fl-h3">WIN YOUR DREAM PRIZE WHILE HELPING TO RESTORE FORESTS WORLDWIDE.</h3>
-          <strong>Here's how it works:</strong>
-          <div class="default-page-con">
-            <ol>
-              <li>Choose a competition and how many entries you would like.</li>
-              <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
-              <li>Tickets for all correct answers are entered into the draw, streamed LIVE on Facebook using Google’s random number generator.</li>
-              <li>If you win, we may try to contact you whilst live on our website and Facebook, so be prepared!</li>
-            </ol>
+        <div class="page-des cnt-page-des">
+          <h2 class="fl-h1">SEND A MESSAGE</h2>
+          <p>We aim to reply to your message within 5 working days.</p>
+          <div class="cnt-form">
+            <form>
+              <div class="input-fields-row">
+                <div class="input-field-col">
+                  <input type="text" name="fname" placeholder="Your Name(required)">
+                </div>
+              </div>
+              <div class="input-fields-row">
+                <div class="input-field-col">
+                  <input type="email" placeholder="Your Email(required)">
+                </div>
+              </div>
+              <div class="input-fields-row">
+                <div class="input-field-col">
+                  <input type="text" placeholder="Your Subject">
+                </div>
+              </div>
+              <div class="input-fields-row">
+                <div class="input-field-col">
+                  <textarea type="text" placeholder="Yours message"></textarea>
+                </div>
+              </div>
+            </form>
           </div>
-          <a class="fl-btn" href="#">SEE COMPETITIONS</a>
+          <a class="fl-btn cnt-form-btn" href="#">send message</a>
           <span><img src="assets/images/hit-page-des-angle.png" alt=""></span>
         </div>
       </div>
     </div>
   </div>    
+</section>
+
+<section class="fl-angle-hdr-cntlr">
+  <div class="fl-angle-hdr">
+    <span class="fl-angle-hdr-join"></span>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="fl-angle-sec-hdr">
+            <h2 class="fl-h5 flash-title"><span>WAYS TO</span> CONTACT US</h2>
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
+</section>
+
+<section class="quick-cnt-links">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="qck-lnk-cntrl">
+          <ul class="clearfix reset-list ulc">
+            <li>
+              <div class="qck-lnk-items">
+                <div class="qck-lnk-item inline-bg mHc">
+                  <h5 class="fl-h5 qck-lnk-title">address</h5>
+                  <address>
+                    Wild Wood Competitions,<br>
+                    A Building, On A Street,<br>
+                    In A City, WR1 3DB
+                  </address>
+                </div>    
+              </div>
+            </li>
+            <li>
+              <div class="qck-lnk-items">
+                <div class="qck-lnk-item inline-bg mHc">
+                  <h5 class="fl-h5 qck-lnk-title">telephone</h5>
+                  <a href="tel:02920257257">02920 257257</a>
+                  <a href="tel:01234564584">01234 564584</a>
+                  <a href="tel:01664394273">01664 394273</a>
+                </div>    
+              </div>
+            </li>
+            <li>
+              <div class="qck-lnk-items">
+                <div class="qck-lnk-item inline-bg mHc">
+                  <h5 class="fl-h5 qck-lnk-title">email</h5>
+                  <a href="mailto:info@wildwoodcomps.co.uk">info@wildwoodcomps.co.uk</a>
+                  <a href="mailto:press@wildwoodcomps.co.uk">press@wildwoodcomps.co.uk</a>
+                  <a href="mailto:help@wildwoodcomps.co.uk">help@wildwoodcomps.co.uk</a>
+                </div>    
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 <footer class="footer-wrp">
