--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -229,7 +229,7 @@
               </div>
             </div>
               <div class="hh-accordion-tab-row">
-                <h3 class="hh-accordion-title">Question Number #2?</h3>
+                <h3 class="hh-accordion-title">Question Number #2</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -239,7 +239,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #3?</h3>
+              <h3 class="hh-accordion-title">Question Number #3</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -249,7 +249,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #4?</h3>
+              <h3 class="hh-accordion-title">Question Number #4</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -259,7 +259,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #5?</h3>
+              <h3 class="hh-accordion-title">Question Number #5</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -269,7 +269,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #6?</h3>
+              <h3 class="hh-accordion-title">Question Number #6</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -279,7 +279,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #7?</h3>
+              <h3 class="hh-accordion-title">Question Number #7</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -289,7 +289,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #8?</h3>
+              <h3 class="hh-accordion-title">Question Number #8</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
