--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -299,7 +299,9 @@
               </div>
             </div>
           </div>
-          <span><img src="assets/images/hit-page-des-angle.png" alt=""></span>
+          <span>
+            <img src="assets/images/hit-page-des-angle.png" alt="">
+          </span>
         </div>
       </div>
     </div>
