--- a/themes/wwcomps/about-us.html
+++ b/themes/wwcomps/about-us.html
@@ -215,11 +215,13 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="page-des about-pg-des">
-          <h2><strong>FROM LITTLE THINGS,</strong>BIG THINGS GROW.</h2>
+        <div class="page-bnr-desc about-pg-bnr-desc">
+          <h2><span>FROM LITTLE THINGS,</span>BIG THINGS GROW.</h2>
           <h3 class="fl-h3">OUR COMPANY IS RUN BY 6 INDIVIDUALS SET ON MAKING A GLOBAL CHANGE.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. Quisque gravida sagittis libero, eu euismod urna placerat sit amet. Mauris tempus molestie sem, in accumsan justo porta non.</p>
-          <p>Nulla volutpat eget est et ullamcorper. Ut porttitor nunc ac elit maximus maximus. Proin vestibulum risus purus, sed vestibulum augue bibendum at. Cras porta commodo diam, cursus egestas dui condimentum vitae. Etiam pretium tincidunt tortor, et dapibus purus placerat ut.</p>
+          <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. Quisque gravida sagittis libero, eu euismod urna placerat sit amet. Mauris tempus molestie sem, in accumsan justo porta non.</p>
+            <p>Nulla volutpat eget est et ullamcorper. Ut porttitor nunc ac elit maximus maximus. Proin vestibulum risus purus, sed vestibulum augue bibendum at. Cras porta commodo diam, cursus egestas dui condimentum vitae. Etiam pretium tincidunt tortor, et dapibus purus placerat ut.</p>
+          </div>
           <a class="fl-btn" href="#">READ OUR FAQS</a>
           <span><img src="assets/images/angle-rgt-white.png" alt=""></span>
         </div>
