--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -215,11 +215,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="page-des faqs-pg-des">
-          <h2><strong>FREQUENTLY ASKED </strong> QUESTIONS</h2>
+        <div class="page-bnr-desc faqs-bnr-pg-desc">
+          <h2><span>FREQUENTLY ASKED </span> QUESTIONS</h2>
           <div class="hh-accordion-tab-cntlr">
             <div class="hh-accordion-tab-row">
-                <h3 class="hh-accordion-title">Question Number #1?</h3>
+                <h3 class="hh-accordion-title"><span></span>Question Number #1?</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -229,7 +229,7 @@
               </div>
             </div>
               <div class="hh-accordion-tab-row">
-                <h3 class="hh-accordion-title">Question Number #2</h3>
+                <h3 class="hh-accordion-title"><span></span>Question Number #2</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -239,7 +239,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #3</h3>
+              <h3 class="hh-accordion-title"><span></span>Question Number #3</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -249,7 +249,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #4</h3>
+              <h3 class="hh-accordion-title"><span></span>Question Number #4</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -259,7 +259,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #5</h3>
+              <h3 class="hh-accordion-title"><span></span>Question Number #5</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -269,7 +269,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #6</h3>
+              <h3 class="hh-accordion-title"><span></span>Question Number #6</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -279,7 +279,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #7</h3>
+              <h3 class="hh-accordion-title"><span></span>Question Number #7</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -289,7 +289,7 @@
               </div>
             </div>
             <div class="hh-accordion-tab-row">
-              <h3 class="hh-accordion-title">Question Number #8</h3>
+              <h3 class="hh-accordion-title"><span></span>Question Number #8</h3>
                 <div class="hh-accordion-des">
                   <div>
                     <p>
@@ -300,7 +300,7 @@
             </div>
           </div>
           <span>
-            <img src="assets/images/hit-page-des-angle.png" alt="">
+            <img src="assets/images/angle-rgt-white.png" alt="">
           </span>
         </div>
       </div>
