--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -214,11 +214,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="page-des">
-          <h2 class="fl-h1"><strong>PLAY TO</strong> PLANT.</h2>
+        <div class="page-bnr-desc">
+          <h2 class="fl-h1"><span>PLAY TO</span> PLANT.</h2>
           <h3 class="fl-h3">WIN YOUR DREAM PRIZE WHILE HELPING TO RESTORE FORESTS WORLDWIDE.</h3>
           <strong>Here's how it works:</strong>
-          <div class="default-page-con">
+          <div>
             <ol>
               <li>Choose a competition and how many entries you would like.</li>
               <li>Answer the qualifying question (be sure to answer correctly!) <br> and complete payment.</li>
