--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -201,14 +201,54 @@
 
 <section class="how-to-play-sec page-banner-section">
   <div class="banner-bg htp-banner-bg">
-    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/hit-bnr-page-rgt-img.jpg')"></div>
+    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/htp-banner-lft-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/htp-banner-rt-img.jpg')"></div>
   </div>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="htp-sec-desc">
-          
+        <div class="htp-sec-desc-cntlr">
+          <div class="htp-desc-hedding">
+            <h3 class="htp-desc-title">HOW TO <span>PLAY</span></h3>
+            <i><img src="assets/images/blue-arrow.png" alt=""></i>
+          </div>
+          <div class="htp-sec-desc">
+            <i><img src="assets/images/white-angle-left.png" alt=""></i>
+            <h6 class="htp-desc-sub-title">Proin gravida velit auctor aliquet aenean sollicitudin, lorem quis bibendum auctor.</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis mi nor. 
+            </p>
+            <div class="htp-desc-button">
+              <a class="fl-btn" href="#">READ MORE</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="how-to-play-sec page-banner-section rstsn-projects-sec">
+  <div class="banner-bg rstsn-projects-bg">
+    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/rstsn-projects-bnr-rt-img.jpg')"></div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="htp-sec-desc-cntlr rstsn-projects-desc-cntlr">
+          <div class="htp-desc-hedding">
+            <h3 class="htp-desc-title"><span>RESTORATION PROJECTS</span></h3>
+            <i><img src="assets/images/blue-arrow.png" alt=""></i>
+          </div>
+          <div class="htp-sec-desc rstsn-projects-desc">
+            <i><img src="assets/images/white-angle-right.png" alt=""></i>
+            <h6 class="htp-desc-sub-title">Proin gravida velit auctor aliquet aenean sollicitudin, lorem quis bibendum auctor.</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non nunc eget lectus consectetur pharetra non in dolor. Phasellus tortor mi, imperdiet porta gravida commodo est id,  iaculis lectus. Sed pretium blandit felis, id tincidunt purus feugiat eu. Nunc id orci porta, iaculis mi nor. 
+            </p>
+            <div class="htp-desc-button">
+              <a class="fl-btn" href="#">READ MORE</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
