--- a/themes/wwcomps/contact-us.html
+++ b/themes/wwcomps/contact-us.html
@@ -213,7 +213,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="page-des cnt-page-des">
+        <div class="page-bnr-desc cnt-page-des">
           <h2 class="fl-h1">SEND A MESSAGE</h2>
           <p>We aim to reply to your message within 5 working days.</p>
           <div class="cnt-form">
@@ -241,7 +241,7 @@
               </div>
               <div class="input-fields-row">
                 <div class="input-field-col">
-                  <textarea type="text" placeholder="Yours message"></textarea>
+                  <textarea placeholder="Yours message"></textarea>
                 </div>
               </div>
               <div class="cnt-us-submit-btn">
@@ -250,7 +250,7 @@
             </form>
           </div>
           <a class="" href="#"></a>
-          <span><img src="assets/images/hit-page-des-angle.png" alt=""></span>
+          <span><img src="assets/images/angle-rgt-white.png" alt=""></span>
         </div>
       </div>
     </div>
