--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -285,6 +285,9 @@
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
                     </p>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. 
+                    </p>
                 </div>
               </div>
             </div>
