--- a/themes/wwcomps/contact-us.html
+++ b/themes/wwcomps/contact-us.html
@@ -250,7 +250,7 @@
             </form>
           </div>
           <a class="" href="#"></a>
-          <span><img src="assets/images/angle-rgt-white.png" alt=""></span>
+          <span><img src="assets/images/angle-rgt-white-2.png" alt=""></span>
         </div>
       </div>
     </div>
@@ -283,9 +283,9 @@
                 <div class="qck-lnk-item inline-bg mHc">
                   <h5 class="fl-h5 qck-lnk-title">address</h5>
                   <address>
-                    Wild Wood Competitions,<br>
+                    <a href="#">Wild Wood Competitions,<br>
                     A Building, On A Street,<br>
-                    In A City, WR1 3DB
+                    In A City, WR1 3DB</a>
                   </address>
                 </div>    
               </div>
