--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>How it works</title>
+  <title>Forest projects</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -191,20 +191,108 @@
   </div>
 </header>
 
-<section class="fl-angle-hdr-cntlr">
+<section class="our-project-sec">
   <div class="fl-angle-hdr">
     <span class="fl-angle-hdr-join"></span>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="fl-angle-sec-hdr">
-            <h2 class="fl-h5 flash-title"><span>HOW IT</span> WORKS</h2> 
+            <h2 class="fl-h5 flash-title"><span>OUR</span> PROJECTS</h2> 
           </div>
         </div>
       </div>
     </div> 
   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="our-project-sec-cntlr">
+          <div class="our-project-grid-items">
+            <ul class="ulc reset-list our-proj-grid">
+               <li class="our-proj-grid-item">
+                <div class="our-project-item">
+                  <div class="project-img">
+                    <img src="assets/images/fp-ourprj-img1.jpg" alt="image">
+                    <div class="proj-btn">
+                      <a class="fl-btn" href="#">VIEW GALLERY</a>
+                      <a class="fl-btn" href="#">PLAY 2 PLANT</a>
+                    </div>
+                  </div>
+                  <div class="pur-proj-dec">
+                    <h4 class="our-proj-title fl-h4">THE SMES' FOREST</h4>
+                    <div class="proj-location">
+                      <span>Romania</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper.</p> 
+                    <p>Duis nibh velit, porttitor sed diam a, iaculis ultrices elit. Nam a venenatis diam. Donec vestibulum varius ante vitae consequat. Pellentesque tellus massa, rutrum nec sodales luctus, rhoncus vel neque.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="our-proj-grid-item">
+                <div class="our-project-item">
+                  <div class="project-img">
+                    <img src="assets/images/fp-ourprj-img2.jpg" alt="image">
+                    <div class="proj-btn">
+                      <a class="fl-btn" href="#">VIEW GALLERY</a>
+                      <a class="fl-btn" href="#">PLAY 2 PLANT</a>
+                    </div>
+                  </div>
+                  <div class="pur-proj-dec">
+                    <h4 class="our-proj-title fl-h4">THE YAVU FOREST</h4>
+                    <div class="proj-location">
+                      <span> Watu Wa Miti, Kenya</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo</p>
+                    <p>Duis nibh velit, porttitor sed diam a, iaculis ultrices elit. Nam a venenatis diam. Donec vestibulum varius ante vitae consequat. Pellentesque tellus massa, rutrum nec sodales luctus, rhoncus vel neque.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="our-proj-grid-item">
+                <div class="our-project-item">
+                  <div class="project-img">
+                    <img src="assets/images/fp-ourprj-img4.jpg" alt="image">
+                    <div class="proj-btn">
+                      <a class="fl-btn"  href="#">VIEW GALLERY</a>
+                      <a class="fl-btn" href="#">PLAY 2 PLANT</a>
+                    </div>
+                  </div>
+                  <div class="pur-proj-dec">
+                    <h4 class="our-proj-title fl-h4">OXFORD CITY FARM</h4>
+                    <div class="proj-location">
+                      <span>Oxford, England</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. Quisque gravida sagittis libero, eu euismod urna placerat sit amet. Mauris tempus molestie sem, in accumsan justo porta non. 
+                    Duis nibh velit, porttitor sed diam a, iaculis ultrices elit. Nam a venenatis diam. Donec vestibulum varius ante vitae consequat. </p>
+                  </div>
+                </div>
+              </li>
+              <li class="our-proj-grid-item">
+                <div class="our-project-item">
+                  <div class="project-img">
+                    <img src="assets/images/fp-ourprj-img3.jpg" alt="image">
+                    <div class="proj-btn">
+                      <a class="fl-btn" href="#">VIEW GALLERY</a>
+                      <a class="fl-btn" href="#">PLAY 2 PLANT</a>
+                    </div>
+                  </div>
+                  <div class="pur-proj-dec">
+                    <h4 class="our-proj-title fl-h4">BUKIT PITON FOREST RESERVE</h4>
+                    <div class="proj-location">
+                      <span>Sabah, Malaysia</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, donec eleifend ut ipsum sed. Duis nibh velit, porttitor sed diam a, iaculis ultrices elit. Nam a venenatis diam. Donec vestibulum varius ante vitae consequat. Pellentesque tellus massa, rutrum nec sodales luctus, rhoncus vel neque.</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
+
 
 
 <footer class="footer-wrp">
@@ -321,6 +409,8 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
+
 <script src="assets/js/main.js"></script>
 </body>
 </html>
