--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -199,6 +199,44 @@
 </header>
 
 
+<section class="lucky-winner-banner page-banner-section">
+  <div class="banner-bg lucky-winner-banner-bg">
+    <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/htp-banner-rt-img.jpg')"></div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="lucky-winner-desc-cntlr">
+          <div class="lucky-winner-slider luckyWinnerSlider">
+            <div class="lw-slide-item-cntlr">
+              <div class="lw-slide-item-desc">
+                <h1 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
+                THE CHANCE TO WIN THIS...</h1>
+                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <p>An XBOX Series X and have it delivered before Xmas!
+                Win the most exciting gift this Christmas for a fraction of the price.</p>
+                <div class="lw-si-prize-cntlr">
+                  <strong>TICKET PRICE: </strong>
+                  <span class="price">
+                    <span class="woocommerce-Price-amount amount">
+                      <bdi>
+                        <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                      </bdi>
+                    </span>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 <section class="how-to-play-sec page-banner-section">
   <div class="banner-bg htp-banner-bg">
     <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/htp-banner-lft-img.jpg')"></div>
