--- a/themes/wwcomps/winner.html
+++ b/themes/wwcomps/winner.html
@@ -216,9 +216,9 @@
       <div class="row">
         <div class="col-md-12">
           <div class="lates-winners-slider-filter">
-             <div class="filter-tabbar">
+            <div class="filter-tabbar">
               <ul class="filter reset-list">
-                <li class="active"><a data-filter="all"  class="all" href="#">ALL</a></li>
+                <li class="active"><a class="all" href="#">ALL</a></li>
                 <li><a data-filter="cars" class="cars" href="#">CARS</a></li>
                 <li><a data-filter="games" class="games" href="#">GAMES</a></li>
                 <li><a data-filter="holiday" class="holiday" href="#">HOLIDAY</a></li>
