--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -202,7 +202,7 @@
 <section class="lucky-winner-banner page-banner-section">
   <div class="banner-bg lucky-winner-banner-bg">
     <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
-    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/htp-banner-rt-img.jpg')"></div>
+    <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/lucky-winner-banner-bg-right-img.jpg')"></div>
   </div>
 
   <div class="container">
@@ -212,20 +212,25 @@
           <div class="lucky-winner-slider luckyWinnerSlider">
             <div class="lw-slide-item-cntlr">
               <div class="lw-slide-item-desc">
+                <i><img src="assets/images/white-angle-right.png" alt=""></i>
                 <h1 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
-                THE CHANCE TO WIN THIS...</h1>
+                <span>THE CHANCE TO WIN THIS...</span></h1>
                 <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
-                <p>An XBOX Series X and have it delivered before Xmas!
+                <p>An XBOX Series X and have it delivered before Xmas!<br>
                 Win the most exciting gift this Christmas for a fraction of the price.</p>
                 <div class="lw-si-prize-cntlr">
                   <strong>TICKET PRICE: </strong>
                   <span class="price">
                     <span class="woocommerce-Price-amount amount">
                       <bdi>
-                        <span class="woocommerce-Price-currencySymbol">£</span>19.99
+                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
                       </bdi>
                     </span>
+                    <i><del>£5.99</del></i>
                   </span>
+                </div>
+                <div class="lw-si-btn">
+                  <a class="fl-btn" href="#">ENTER NOW</a>
                 </div>
               </div>
             </div>
