--- a/themes/wwcomps/front-page.html
+++ b/themes/wwcomps/front-page.html
@@ -234,7 +234,154 @@
                 </div>
               </div>
             </div>
+
+            <div class="lw-slide-item-cntlr">
+              <div class="lw-slide-item-desc">
+                <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                <h2 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS... 2</span></h2>
+                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <p>An XBOX Series X and have it delivered before Xmas!<br>
+                Win the most exciting gift this Christmas for a fraction of the price.</p>
+                <div class="lw-si-prize-cntlr">
+                  <strong>TICKET PRICE: </strong>
+                  <span class="price">
+                    <span class="woocommerce-Price-amount amount">
+                      <bdi>
+                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                      </bdi>
+                    </span>
+                    <i><del>£5.99</del></i>
+                  </span>
+                </div>
+                <div class="lw-si-btn">
+                  <a class="fl-btn" href="#">ENTER NOW</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="lw-slide-item-cntlr">
+              <div class="lw-slide-item-desc">
+                <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                <h2 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS... 3</span></h2>
+                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <p>An XBOX Series X and have it delivered before Xmas!<br>
+                Win the most exciting gift this Christmas for a fraction of the price.</p>
+                <div class="lw-si-prize-cntlr">
+                  <strong>TICKET PRICE: </strong>
+                  <span class="price">
+                    <span class="woocommerce-Price-amount amount">
+                      <bdi>
+                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                      </bdi>
+                    </span>
+                    <i><del>£5.99</del></i>
+                  </span>
+                </div>
+                <div class="lw-si-btn">
+                  <a class="fl-btn" href="#">ENTER NOW</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="lw-slide-item-cntlr">
+              <div class="lw-slide-item-desc">
+                <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                <h2 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS... 3</span></h2>
+                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <p>An XBOX Series X and have it delivered before Xmas!<br>
+                Win the most exciting gift this Christmas for a fraction of the price.</p>
+                <div class="lw-si-prize-cntlr">
+                  <strong>TICKET PRICE: </strong>
+                  <span class="price">
+                    <span class="woocommerce-Price-amount amount">
+                      <bdi>
+                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                      </bdi>
+                    </span>
+                    <i><del>£5.99</del></i>
+                  </span>
+                </div>
+                <div class="lw-si-btn">
+                  <a class="fl-btn" href="#">ENTER NOW</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="lw-slide-item-cntlr">
+              <div class="lw-slide-item-desc">
+                <i><img src="assets/images/white-angle-right.png" alt=""></i>
+                <h2 class="lw-slide-item-title">ONE LUCKY WINNER HAS 
+                <span>THE CHANCE TO WIN THIS... 3</span></h2>
+                <h3 class="lw-slide-item-sub-title">XBOX SERIES X</h3>
+                <p>An XBOX Series X and have it delivered before Xmas!<br>
+                Win the most exciting gift this Christmas for a fraction of the price.</p>
+                <div class="lw-si-prize-cntlr">
+                  <strong>TICKET PRICE: </strong>
+                  <span class="price">
+                    <span class="woocommerce-Price-amount amount">
+                      <bdi>
+                        <span class="woocommerce-Price-currencySymbol"> £</span>19.99
+                      </bdi>
+                    </span>
+                    <i><del>£5.99</del></i>
+                  </span>
+                </div>
+                <div class="lw-si-btn">
+                  <a class="fl-btn" href="#">ENTER NOW</a>
+                </div>
+              </div>
+            </div>
+
+
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="counter-up-sec">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="counter-up-cntlr">
+          <ul class="reset-list">
+            <li>
+              <div class="counter-item">
+                <div class="counter-item-img"><img src="assets/images/counter-item-img-001.svg" alt=""></div>
+                <strong class="number-of-counter"><span class="counter">1900</span>+</strong>
+                <h6 class="counter-item-sub-title">TICKETS SOLD</h6>
+              </div>
+            </li>
+
+            <li>
+              <div class="counter-item">
+                <div class="counter-item-img"><img src="assets/images/counter-item-img-002.svg" alt=""></div>
+                <strong class="number-of-counter"><span class="counter">359</span></strong>
+                <h6 class="counter-item-sub-title">TICKETS SOLD</h6>
+              </div>
+            </li>
+
+            <li>
+              <div class="counter-item">
+                <div class="counter-item-img"><img src="assets/images/counter-item-img-003.svg" alt=""></div>
+                <strong class="number-of-counter"><span class="counter">4421</span>+</strong>
+                <h6 class="counter-item-sub-title">TICKETS SOLD</h6>
+              </div>
+            </li>
+
+            <li>
+              <div class="counter-item">
+                <div class="counter-item-img"><img src="assets/images/counter-item-img-004.svg" alt=""></div>
+                <strong class="number-of-counter"><span class="counter">66</span>K</strong>
+                <h6 class="counter-item-sub-title">TICKETS SOLD</h6>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -509,6 +656,11 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+
+
+<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.counterup/1.0/jquery.counterup.min.js"></script>
+
 <script src="assets/js/main.js"></script>
 
 </body>
