--- a/themes/wwcomps/winner.html
+++ b/themes/wwcomps/winner.html
@@ -237,7 +237,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-1.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
+                    <div class="wgid-title-bar">
                       <h3 class="fl-h6 pgid-title wgid-title"><a href="#">lg oled55cx5lb (2020) 4k tv</a></h3>
                     </div>
                     <div class="winr-grd-date">
@@ -253,9 +253,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-2.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">bmw e92 m3 competition</a></h3>
-                    </div>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">bmw e92 m3 competition</a></h3>
                     <div class="winr-grd-date">
                       <span>06/01/2021</span>
                     </div>
@@ -269,9 +267,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-3.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">£50,000 tax free cash</a></h3>
-                    </div>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">£50,000 tax free cash</a></h3>
                     <div class="winr-grd-date">
                       <span>04/01/2021</span>
                     </div>
@@ -285,9 +281,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-4.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">playstation 5 bundale</a></h3>
-                    </div>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">playstation 5 bundale</a></h3>
                     <div class="winr-grd-date">
                       <span>01/01/2021</span>
                     </div>
@@ -301,9 +295,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-5.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">eden project weekend</a></h3>
-                    </div>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">eden project weekend</a></h3>
                     <div class="winr-grd-date">
                       <span>28/12/2020</span>
                     </div>
@@ -317,9 +309,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-6.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">volkswagen transporter<br> t6 kombi</a></h3>
-                    </div>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">volkswagen transporter<br> t6 kombi</a></h3>
                     <div class="winr-grd-date">
                       <span>25/12/2020</span>
                     </div>
@@ -333,9 +323,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-7.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">rolex deepsea blue<br> limited edition</a></h3>
-                    </div>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">rolex deepsea blue<br> limited edition</a></h3>
                     <div class="winr-grd-date">
                       <span>20/12/2020</span>
                     </div>
@@ -349,9 +337,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-8.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">go ape with 4 friends</a></h3>
-                    </div>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">go ape with 4 friends</a></h3>
                     <div class="winr-grd-date">
                       <span>11/12/2020</span>
                     </div>
@@ -365,9 +351,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-9.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">xbox series x + £1000<br> tax free cash</a></h3>
-                    </div>
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">xbox series x + £1000<br> tax free cash</a></h3>
                     <div class="winr-grd-date">
                       <span>12/02/2020</span>
                     </div>
@@ -381,9 +365,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-10.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">axe throwing for two</a></h3>
-                    </div>                    
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">axe throwing for two</a></h3>
                     <div class="winr-grd-date">
                       <span>08/12/2020</span>
                     </div>
@@ -397,9 +379,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-11.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">vw caddy</a></h3>
-                    </div>                    
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">vw caddy</a></h3>                  
                     <div class="winr-grd-date">
                       <span>03/12/2020</span>
                     </div>
@@ -413,9 +393,7 @@
                     <div class="inline-bg" style="background: url(assets/images/wnr-img-12.jpg);"></div>
                   </div>
                   <div class="winr-grd-item-des product-grd-item-des mHc">
-                    <div class="wgid-title-bar mHc1">
-                      <h3 class="fl-h6 pgid-title wgid-title"><a href="#">jaguar f-type 3.0 v6<br> supercharged</a></h3>
-                    </div>                    
+                    <h3 class="fl-h6 pgid-title wgid-title"><a href="#">jaguar f-type 3.0 v6<br> supercharged</a></h3>                   
                     <div class="winr-grd-date">
                       <span>30/11/2020</span>
                     </div>
