--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -262,8 +262,8 @@
                     <div class="proj-location">
                       <span>Oxford, England</span>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. Quisque gravida sagittis libero, eu euismod urna placerat sit amet. Mauris tempus molestie sem, in accumsan justo porta non. 
-                    Duis nibh velit, porttitor sed diam a, iaculis ultrices elit. Nam a venenatis diam. Donec vestibulum varius ante vitae consequat. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend ut ipsum sed condimentum. Sed luctus efficitur sapien nec commodo. Aliquam sodales diam urna, in efficitur sem ullamcorper consectetur. Quisque gravida sagittis libero, eu euismod urna placerat sit amet. Mauris tempus molestie sem, in accumsan justo porta non.</p> 
+                    <p>Duis nibh velit, porttitor sed diam a, iaculis ultrices elit. Nam a venenatis diam. Donec vestibulum varius ante vitae consequat. </p>
                   </div>
                 </div>
               </li>
@@ -292,7 +292,48 @@
     </div>
   </div>
 </section>
-
+<section class="partners-sec">
+  <div class="fl-angle-hdr">
+    <span class="fl-angle-hdr-join"></span>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="fl-angle-sec-hdr">
+            <h2 class="fl-h5 flash-title"><span>OUR</span> PROJECTS</h2> 
+          </div>
+        </div>
+      </div>
+    </div> 
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col sm-12">
+        <div class="partners-sec-cntlr">
+          <ul class="ulc reset-list">
+            <li>
+              <div class="partners-logo"><img src="assets/images/fp-project1.png" alt=""></div>
+            </li>
+            <li>
+              <div class="partners-logo"><img src="assets/images/fp-project2.png" alt=""></div>
+            </li>
+            <li>
+              <div class="partners-logo"><img src="assets/images/fp-project3.png" alt=""></div>
+            </li>
+            <li>
+              <div class="partners-logo"><img src="assets/images/fp-project4.png" alt=""></div>
+            </li>
+            <li>
+              <div class="partners-logo"><img src="assets/images/fp-project5.png" alt=""></div>
+            </li>
+            <li>
+              <div class="partners-logo"><img src="assets/images/fp-project6.png" alt=""></div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <footer class="footer-wrp">
