--- a/themes/wwcomps/forest-projects.html
+++ b/themes/wwcomps/forest-projects.html
@@ -312,7 +312,7 @@
           <ul class="ulc reset-list">
             <li>
               <div class="partners-logo">
-                <a href=""><img src="assets/images/fp-project1.png" alt=""></a>
+                <img src="assets/images/fp-project1.png" alt="">
               </div>
             </li>
             <li>
