--- a/themes/wwcomps/how-it-works.html
+++ b/themes/wwcomps/how-it-works.html
@@ -211,6 +211,7 @@
     <div class="bnr-bg-lft inline-bg" style="background-image:url('assets/images/hit-bnr-page-lft-img.jpg')"></div>
     <div class="bnr-bg-rgt inline-bg" style="background-image:url('assets/images/hit-bnr-page-rgt-img.jpg')"></div>
   </div>
+  <div class="page-banner-sec-cntlr">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -227,10 +228,14 @@
             </ol>
           </div>
           <a class="fl-btn" href="#">SEE COMPETITIONS</a>
-          <span><img src="assets/images/angle-rgt-white.png" alt=""></span>
+          <span>
+            <img class="desktop" src="assets/images/angle-rgt-white.png" alt="">
+            <img class="mobile" src="assets/images/angle-rgt-white-res.png" alt="">
+          </span>
         </div>
       </div>
     </div>
+  </div>    
   </div>    
 </section>
 <footer class="footer-wrp">
@@ -347,6 +352,7 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
