--- a/themes/wwcomps/contact-us.html
+++ b/themes/wwcomps/contact-us.html
@@ -277,38 +277,47 @@
     <div class="row">
       <div class="col-md-12">
         <div class="qck-lnk-cntrl">
-          <ul class="clearfix reset-list ulc">
+          <ul class="clearfix reset-list">
             <li>
-              <div class="qck-lnk-items">
-                <div class="qck-lnk-item inline-bg mHc">
+              <div class="qck-lnk-item mHc">
+                <div class="qck-lnk-img">
+                  <i><img src="assets/images/location-ico.png" alt=""></i>
+                </div>
+                <div class="qck-lnk-item-des inline-bg mHc1">
                   <h5 class="fl-h5 qck-lnk-title">address</h5>
                   <address>
                     <a href="#">Wild Wood Competitions,<br>
                     A Building, On A Street,<br>
                     In A City, WR1 3DB</a>
                   </address>
-                </div>    
-              </div>
+                </div>  
+              </div>    
             </li>
             <li>
-              <div class="qck-lnk-items">
-                <div class="qck-lnk-item inline-bg mHc">
+              <div class="qck-lnk-item mHc">
+                <div class="qck-lnk-img">
+                  <i><img src="assets/images/phone-icon.png" alt=""></i>
+                </div>
+                <div class="qck-lnk-item-des inline-bg mHc1">
                   <h5 class="fl-h5 qck-lnk-title">telephone</h5>
                   <a href="tel:02920257257">02920 257257</a>
                   <a href="tel:01234564584">01234 564584</a>
                   <a href="tel:01664394273">01664 394273</a>
-                </div>    
-              </div>
+                </div>  
+              </div>    
             </li>
             <li>
-              <div class="qck-lnk-items">
-                <div class="qck-lnk-item inline-bg mHc">
+              <div class="qck-lnk-item mHc">
+                <div class="qck-lnk-img">
+                  <i><img src="assets/images/mail-icon.png" alt=""></i>
+                </div>
+                <div class="qck-lnk-item-des inline-bg mHc1">
                   <h5 class="fl-h5 qck-lnk-title">email</h5>
                   <a href="mailto:info@wildwoodcomps.co.uk">info@wildwoodcomps.co.uk</a>
                   <a href="mailto:press@wildwoodcomps.co.uk">press@wildwoodcomps.co.uk</a>
                   <a href="mailto:help@wildwoodcomps.co.uk">help@wildwoodcomps.co.uk</a>
-                </div>    
-              </div>
+                </div>  
+              </div>    
             </li>
           </ul>
         </div>
@@ -431,6 +440,8 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
+
 <script src="assets/js/main.js"></script>
 
 </body>
