--- a/themes/wwcomps/about-us.html
+++ b/themes/wwcomps/about-us.html
@@ -223,7 +223,10 @@
             <p>Nulla volutpat eget est et ullamcorper. Ut porttitor nunc ac elit maximus maximus. Proin vestibulum risus purus, sed vestibulum augue bibendum at. Cras porta commodo diam, cursus egestas dui condimentum vitae. Etiam pretium tincidunt tortor, et dapibus purus placerat ut.</p>
           </div>
           <a class="fl-btn" href="#">READ OUR FAQS</a>
-          <span><img src="assets/images/angle-rgt-white.png" alt=""></span>
+          <span>
+            <img class="desktop" src="assets/images/angle-rgt-white.png" alt="">
+            <img class="mobile" src="assets/images/angle-rgt-white-res.png" alt="">
+          </span>
         </div>
       </div>
     </div>
