--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -303,7 +303,8 @@
             </div>
           </div>
           <span>
-            <img src="assets/images/angle-rgt-white.png" alt="">
+            <img class="desktop" src="assets/images/angle-rgt-white.png" alt="">
+            <img class="mobile" src="assets/images/angle-rgt-white-res.png" alt="">
           </span>
         </div>
       </div>
