--- a/themes/wwcomps/winner.html
+++ b/themes/wwcomps/winner.html
@@ -216,7 +216,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="lates-winners-slider-filter">
-            <div class="filter-tabbar">
+            <div class="filter-tabbar winr-tabbar">
               <ul class="filter reset-list">
                 <li class="active"><a class="all" href="#">ALL</a></li>
                 <li><a data-filter="cars" class="cars" href="#">CARS</a></li>
