--- a/themes/wwcomps/faqs.html
+++ b/themes/wwcomps/faqs.html
@@ -216,7 +216,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="page-bnr-desc faqs-bnr-pg-desc">
-          <h2><span>FREQUENTLY ASKED </span> QUESTIONS</h2>
+          <h2 class="fl-h1"><span>FREQUENTLY ASKED </span> QUESTIONS</h2>
           <div class="hh-accordion-tab-cntlr">
             <div class="hh-accordion-tab-row">
                 <h3 class="hh-accordion-title"><span></span>Question Number #1?</h3>
@@ -426,6 +426,7 @@
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
+<script src="assets/js/masonry.pkgd.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
